[package]
name = "h_os"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
# bootimage will add this argument to bootimage runner
# will be ignored under cargo run command
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
            "-serial","stdio",
            # hide the display window when testing
            "-display", "none",
            ]
#add timeout limits for each test to avoid infinite loop
test-timeout = 300 # in seconds
# config the bootimage success exit code
test-success-exit-code = 33 #(0x10 << 1) | 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NOTICE: CAN NOT use the lates bootloader dependency, will incur COMPILATION ERROR
# bootloader = "0.11.3"
bootloader = "0.9.23"
# can not use volatile varsion later than 0.3.0
# volatile = "0.5.1"
volatile = "0.3.0"

spin = "0.9.8"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"


[dependencies.lazy_static]
version = "1.4.0"
# this program does not link with std library, Add this feature to the crate
features = ["spin_no_std"]



[profile.dev]
# panic = "abort"

[profile.release]
panic = "abort"

